added server file

--- a/src/app/newsletter/newsletter.component.html
+++ b/src/app/newsletter/newsletter.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid newsletter-wrap">
+<section class="container-fluid newsletter-wrap" style="margin-top: 4rem">
     <div class="row">
         <div class="container">
             <h2 class="tittle-wrap">get the latest from MENAMALL</h2>
