--- a/src/app/partials/trending-slider/trending-slider.component.html
+++ b/src/app/partials/trending-slider/trending-slider.component.html
@@ -1,25 +1,70 @@
-<!-- <section class="container-fluid trending-wrap"> <div class="row">
-				<div class="container">
-					<div *ngFor="let minibanner of miniBannerData; let rowIndex = index">
-							<!-- <h2 class="tittle-wrap">{{minibanner.title}}</h2>
-							<p class="small-tittle">{{minibanner.subtitle}}</p> -->
-							 <!-- <div class="row">
-								<div class="trending-women-wrap">
-								 <div *ngFor="let ii of miniBannerData2[rowIndex] |values" class="col-md-4 col-sm-4 col-xs-6">
-									<div class="women-clothing-img">	
-									 <a routerLink="{{ii.id}}">	
-										<img src="{{ii.image}}" alt="image" class="img-responsive" height="298" width="370">
-									 </a>
-									</div>
-								</div> 
+<section class="container-fluid trending-wrap"> 
+		<div class="container">
+			<!--<div *ngFor="let minibanner of miniBannerData; let rowIndex = index">
+					 <h2 class="tittle-wrap">{{minibanner.title}}</h2>
+					<p class="small-tittle">{{minibanner.subtitle}}</p> -->
+					 <!-- <div class="row">
+						<div class="trending-women-wrap">
+						 <div *ngFor="let ii of miniBannerData2[rowIndex] |values" class="col-md-4 col-sm-4 col-xs-6">
+							<div class="women-clothing-img">	
+							 <a routerLink="{{ii.id}}">	
+								<img src="{{ii.image}}" alt="image" class="img-responsive" height="298" width="370">
+							 </a>
 							</div>
-						</div>	
-					</div>	
-				</div>
-			</div>
-</section> --> 
+						</div> 
+					</div>
+				</div>	
+			</div>	
+		</div> --> 
+		 
+		
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<!-- Indicators -->
+<ol class="carousel-indicators">
+  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+  <li data-target="#myCarousel" data-slide-to="1"></li>
+  <li data-target="#myCarousel" data-slide-to="2"></li>
+</ol>
 
-<div id="landingPage" >
-	
-</div> 
+<!-- Wrapper for slides -->
+<div class="carousel-inner">
+  <div class="item active">
+	<img src="../../assets/img/banner.png" alt="Chania">
+	<div class="carousel-caption">
+	  <h3>Fashion</h3>
+	  <p>LA is always so much fun!</p>
+	</div>
+  </div>
+
+  <div class="item">
+	<img src="../../assets/img/banner.jpg" alt="Chicago">
+	<div class="carousel-caption">
+	  <h3>Women Fashion</h3>
+	  <p>Loving it</p>
+	</div>
+  </div>
+
+  <div class="item">
+	<img src="../../assets/img/banner1.png" alt="New York">
+	<div class="carousel-caption">
+	  <h3>New York</h3>
+	  <p>We love the Big Apple!</p>
+	</div>
+  </div>
+</div>
+
+<!-- Left and right controls -->
+<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-left"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="right carousel-control" href="#myCarousel" data-slide="next">
+  <span class="glyphicon glyphicon-chevron-right"></span>
+  <span class="sr-only">Next</span>
+</a>
+</div>
+</div>
+</section>
+
+
 <app-global-title-injector [titleInput] = "titleName"></app-global-title-injector>
